kubernetes_security/03_network_policies/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
    - name: curl
      image: curlimages/curl:7.72.0
      command: ["sleep", "1h"]
